fix troup names and tightness

--- a/notebooks/figures/Compare Troup.ipynb
+++ b/notebooks/figures/Compare Troup.ipynb
@@ -289,6 +289,8 @@
     "                                                        n_times=16384, \n",
     "                                                        plot_kwargs=dict(color='tab:blue')),\n",
     "                               scatter_kw=scatter_kw)\n",
+    "                ax1.set_xlabel('')\n",
+    "                ax2.set_xlabel('')\n",
     "\n",
     "                # over-plot Troup orbit\n",
     "                t2 = Time(np.linspace(*ax1.get_xlim(), 10000), format='mjd')\n",
@@ -305,7 +307,10 @@
     "                ylim = ax1.get_ylim()\n",
     "                yptp = ylim[1] - ylim[0]\n",
     "                ax1.text(data.t.tcb.mjd.min(), ylim[1]-0.1*yptp, apogee_id, fontsize=12)\n",
-    "\n",
+    "            \n",
+    "            ax1.set_xlabel(r'${\\rm BMJD} - t_0$ [day]')\n",
+    "            ax2.set_xlabel('period, $P$ [day]')\n",
+    "            \n",
     "            fig.tight_layout()\n",
     "            fig.savefig(path.join(figures_path, 'troup-{0}.pdf'.format('-'.join(label.split()))))\n",
     "            plt.close(fig)"
