--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -1103,7 +1103,7 @@ likely because the data changed between data releases.
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=\textwidth]{unimodal.pdf}
+\includegraphics[width=\textwidth]{troup-unimodal.pdf}
 \end{center}
 \caption{%
 TODO:
@@ -1113,7 +1113,7 @@ TODO:
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=\textwidth]{multimodal.pdf}
+\includegraphics[width=\textwidth]{troup-multimodal.pdf}
 \end{center}
 \caption{%
 TODO:
@@ -1123,7 +1123,7 @@ TODO:
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=\textwidth]{data-changed.pdf}
+\includegraphics[width=\textwidth]{troup-data-changed.pdf}
 \end{center}
 \caption{%
 TODO:
