thickness and read mcmc samples

--- a/notebooks/figures/Compare Troup.ipynb
+++ b/notebooks/figures/Compare Troup.ipynb
@@ -49,7 +49,8 @@
     "Session, _ = db_connect(path.join(TWOFACE_CACHE_PATH, 'apogee.sqlite'))\n",
     "session = Session()\n",
     "\n",
-    "samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter.hdf5')"
+    "samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter.hdf5')\n",
+    "mcmc_samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter-mcmc.hdf5')"
    ]
   },
   {
@@ -263,16 +264,23 @@
     "}\n",
     "\n",
     "with mpl.rc_context(rc):\n",
-    "    with h5py.File(samples_file) as f:\n",
+    "    with h5py.File(samples_file) as f, h5py.File(mcmc_samples_file) as mcmc_f:\n",
     "        for label, ids in classes.items():\n",
     "            # fig, axes = plt.subplots(len(ids), 2, figsize=(12, 4*len(ids)))\n",
     "            fig = plt.figure(figsize=(8, 2.375*len(ids)))\n",
     "            gs = GridSpec(len(ids), 3)\n",
     "\n",
     "            for i, apogee_id in enumerate(ids):\n",
-    "                samples = JokerSamples.from_hdf5(f[apogee_id])\n",
+    "                if apogee_id in mcmc_f:\n",
+    "                    samples = JokerSamples.from_hdf5(mcmc_f[apogee_id])\n",
+    "                    print('mcmc')\n",
+    "                else:\n",
+    "                    samples = JokerSamples.from_hdf5(f[apogee_id])\n",
+    "                    print('thejoker')\n",
+    "                    \n",
     "                star = AllStar.get_apogee_id(session, apogee_id)\n",
     "                data = star.apogeervdata(clean=False)\n",
+    "                samples.t0 = data.t0\n",
     "\n",
     "                troup_row = troup[troup['APOGEE_ID'] == apogee_id]\n",
     "                troup_orb = troup_to_orbit(troup_row)\n",
@@ -287,15 +295,17 @@
     "                plot_two_panel(data, samples, axes=axes,\n",
     "                               plot_data_orbits_kw=dict(highlight_P_extrema=False, \n",
     "                                                        n_times=16384, \n",
+    "                                                        relative_to_t0=True,\n",
     "                                                        plot_kwargs=dict(color='tab:blue')),\n",
     "                               scatter_kw=scatter_kw)\n",
     "                ax1.set_xlabel('')\n",
     "                ax2.set_xlabel('')\n",
     "\n",
     "                # over-plot Troup orbit\n",
-    "                t2 = Time(np.linspace(*ax1.get_xlim(), 10000), format='mjd')\n",
-    "                ax1.plot(t2.tcb.mjd, troup_orb.radial_velocity(t2).to(u.km/u.s), \n",
-    "                         marker='', color='tab:orange', alpha=0.5, zorder=-10)\n",
+    "                _t0 = data.t.tcb.mjd.min()\n",
+    "                t2 = Time(np.linspace(*ax1.get_xlim(), 10000) + _t0, format='mjd')\n",
+    "                ax1.plot(t2.tcb.mjd - _t0, troup_orb.radial_velocity(t2).to(u.km/u.s), \n",
+    "                         marker='', color='tab:orange', alpha=0.5, zorder=-10, linewidth=2)\n",
     "                ax2.scatter(troup_row['PERIOD'], troup_row['ECC'], \n",
     "                            marker='+', linewidth=2., s=100, color='tab:orange', \n",
     "                            label='Troup+2016 fit', zorder=-10, alpha=0.75)\n",
@@ -304,9 +314,12 @@
     "                    ax2.legend(loc='upper left', fontsize=10)\n",
     "\n",
     "                # add text\n",
+    "                xlim = ax1.get_xlim()\n",
     "                ylim = ax1.get_ylim()\n",
-    "                yptp = ylim[1] - ylim[0]\n",
-    "                ax1.text(data.t.tcb.mjd.min(), ylim[1]-0.1*yptp, apogee_id, fontsize=12)\n",
+    "\n",
+    "                ax1.text(xlim[0] + (xlim[1]-xlim[0])/20,\n",
+    "                         ylim[1] - (ylim[1]-ylim[0])/20,\n",
+    "                         apogee_id, fontsize=12, ha='left', va='top')\n",
     "            \n",
     "            ax1.set_xlabel(r'${\\rm BMJD} - t_0$ [day]')\n",
     "            ax2.set_xlabel('period, $P$ [day]')\n",
