--- a/notebooks/figures/HighK-unimodal.ipynb
+++ b/notebooks/figures/HighK-unimodal.ipynb
@@ -178,7 +178,7 @@
     "with h5py.File(mcmc_samples_file, 'r') as mcmc_f, h5py.File(samples_file, 'r') as joker_f:\n",
     "    for i, star in tqdm.tqdm(enumerate(unimodal_stars)):\n",
     "        data = star.apogeervdata()\n",
-    "        if star.apogee_id in mcmc_f:\n",
+    "        if star.apogee_id in mcmc_f and unimodal_converged[i]:\n",
     "            samples = JokerSamples.from_hdf5(mcmc_f[star.apogee_id])\n",
     "            R = mcmc_f[star.apogee_id]['chain-stats/gelman_rubin'][:]\n",
     "        else:\n",
@@ -189,7 +189,11 @@
     "        MAP = MAP_sample(data, samples, joker_pars)\n",
     "        for k in samples.keys():\n",
     "            rows[k].append(MAP[k])\n",
-    "            rows[k+'_err'].append(1.5 * median_absolute_deviation(samples[k]))\n",
+    "            \n",
+    "            if unimodal_converged[i]:\n",
+    "                rows[k+'_err'].append(1.5 * median_absolute_deviation(samples[k]))\n",
+    "            else:\n",
+    "                rows[k+'_err'].append(np.nan * samples[k].unit)\n",
     "            \n",
     "        rows['t0'].append(data.t0.tcb.mjd)\n",
     "        rows['converged'].append(unimodal_converged[i])\n",
@@ -249,6 +253,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Third-party\n",
+    "from astropy.utils.misc import isiterable\n",
+    "from astropy.constants import G\n",
+    "import astropy.units as u\n",
+    "import numpy as np\n",
+    "from scipy.optimize import root\n",
+    "\n",
+    "# Project\n",
+    "from twoface.log import log as logger\n",
+    "from twoface.mass import m2_func\n",
+    "\n",
+    "def get_m2_min(m1, mf):\n",
+    "    mf = mf.to(m1.unit)\n",
+    "    if isiterable(m1) and isiterable(mf):\n",
+    "        m2s = []\n",
+    "        for x, y in zip(m1, mf):\n",
+    "            try:\n",
+    "                res = root(m2_func, x0=10., args=(x.value, 1., y.value))\n",
+    "                if not res.success:\n",
+    "                    raise RuntimeError('Unsuccessful')\n",
+    "                m2s.append(res.x[0])\n",
+    "            except Exception as e:\n",
+    "                logger.debug('Failed to compute m2_min for sample: {0}'\n",
+    "                             .format(str(e)))\n",
+    "                m2s.append(np.nan)\n",
+    "        return m2s * m1.unit\n",
+    "\n",
+    "    else:\n",
+    "        res = root(m2_func, x0=10., args=(m1.value, 1., mf.value))\n",
+    "\n",
+    "        if res.success:\n",
+    "            return res.x[0] * m1.unit\n",
+    "        else:\n",
+    "            return np.nan * m1.unit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rnd = np.random.RandomState(seed=42)\n",
     "N = rnd.normal\n",
     "\n",
@@ -271,14 +317,17 @@
     "    m2_mins = get_m2_min(m1_samples, mass_func)\n",
     "\n",
     "    med_m1 = np.median(m1_samples)\n",
-    "    med_m2 = np.median(m2_mins)\n",
+    "    med_m2 = np.nanmedian(m2_mins)\n",
     "    \n",
     "    m1[i] = med_m1\n",
     "    m1_err[i] = 1.5*median_absolute_deviation(m1_samples)\n",
     "    m2_min[i] = med_m2\n",
     "    m2_min_err[i] = 1.5*median_absolute_deviation(m2_mins)\n",
     "    mass_ratio[i] = (med_m2 / med_m1).decompose().value\n",
-    "    mass_ratio_err[i] = 1.5*median_absolute_deviation(m2_mins / m1_samples).decompose().value\n",
+    "    try:\n",
+    "        mass_ratio_err[i] = 1.5*median_absolute_deviation(m2_mins / m1_samples, ignore_nan=True).decompose().value\n",
+    "    except AttributeError:\n",
+    "        mass_ratio_err[i] = np.nan\n",
     "    \n",
     "tbl_with_ness['M1'] = m1\n",
     "tbl_with_ness['M1_err'] = m1_err\n",
@@ -367,7 +416,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_catalog['M1'][full_catalog['M1'].mask] = np.nan"
+    "full_catalog['M1'][full_catalog['M1'].mask] = np.nan\n",
+    "full_catalog['M2_min'][full_catalog['M2_min'].mask] = np.nan"
    ]
   },
   {
@@ -515,6 +565,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For my own sake, make the same for unconverged stars:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(123)\n",
+    "\n",
+    "rc = {\n",
+    "    'axes.labelsize': 18,\n",
+    "    'xtick.labelsize': 14,\n",
+    "    'ytick.labelsize': 14\n",
+    "}\n",
+    "    \n",
+    "subset = full_catalog[np.logical_not(full_catalog['converged'])]\n",
+    "rand_subset = np.random.choice(len(subset), size=8, replace=False)\n",
+    "rand_subset = rand_subset[np.argsort(subset['e'][rand_subset])]\n",
+    "\n",
+    "with h5py.File(samples_file, 'r') as jok_f, h5py.File(mcmc_samples_file, 'r') as mcmc_f:\n",
+    "    with mpl.rc_context(rc):\n",
+    "        fig, axes = plt.subplots(4, 2, figsize=(8, 10), sharex=True)\n",
+    "\n",
+    "        for i, idx in enumerate(rand_subset):\n",
+    "            ax = axes.flat[i]\n",
+    "\n",
+    "            star = AllStar.get_apogee_id(session, subset[idx]['APOGEE_ID'])\n",
+    "            data = star.apogeervdata()\n",
+    "\n",
+    "            if apogee_id in mcmc_f:\n",
+    "                f = mcmc_f\n",
+    "                print('mcmc')\n",
+    "            else:\n",
+    "                f = jok_f\n",
+    "                print('thejoker')\n",
+    "\n",
+    "            samples = JokerSamples.from_hdf5(jok_f[star.apogee_id])\n",
+    "            samples.t0 = data.t0\n",
+    "\n",
+    "            if len(samples) > 1:\n",
+    "                sample = MAP_sample(data, samples, joker_pars)\n",
+    "            else:\n",
+    "                sample = samples[0]\n",
+    "\n",
+    "            fig = plot_phase_fold(data, sample, ax=ax, \n",
+    "                                  jitter_errorbar=True, label=False)\n",
+    "            xlim = ax.get_xlim()\n",
+    "            ylim = (data.rv.value.min(), data.rv.value.max())\n",
+    "            yspan = ylim[1]-ylim[0]\n",
+    "            ylim = ax.set_ylim(ylim[0]-0.35*yspan, ylim[1]+0.35*yspan)\n",
+    "\n",
+    "            text = ('{0},  '.format(star.apogee_id) + \n",
+    "                    '$P = {0.value:.2f}$ {0.unit:latex},  '.format(sample['P']) + \n",
+    "                    '$e = {0:.2f}$'.format(sample['e']))\n",
+    "            ax.text(xlim[0] + (xlim[1]-xlim[0])/15,\n",
+    "                    ylim[1] - (ylim[1]-ylim[0])/20,\n",
+    "                    text, fontsize=10, va='top', ha='left')\n",
+    "            # _ = plot_two_panel(data, samples)\n",
+    "\n",
+    "        ax.set_xlim(-0.02, 1.02)\n",
+    "\n",
+    "        for i in [0,1]:\n",
+    "            axes[-1, i].set_xlabel(r'phase, $\\frac{M-M_0}{2\\pi}$')\n",
+    "\n",
+    "        for i in range(4):\n",
+    "            axes[i, 0].set_ylabel(_RV_LBL.format(u.km/u.s))\n",
+    "\n",
+    "        fig.suptitle('Example stars from the high-$K$, unimodal sample', \n",
+    "                     x=0.55, y=0.96, fontsize=18)\n",
+    "        fig.tight_layout()\n",
+    "        fig.subplots_adjust(top=0.92)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_catalog['converged'].sum(), len(full_catalog)-full_catalog['converged'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.hist(full_catalog['e'][~full_catalog['converged']], bins='auto');\n",
+    "plt.hist(full_catalog['e'], bins='auto');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -607,6 +762,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "derp = full_catalog\n",
+    "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(6,6))\n",
     "\n",
     "ax.errorbar(derp['P'], derp['LOGG'],\n",
@@ -614,6 +771,7 @@
     "            marker='o', linestyle='none', alpha=0.8)\n",
     "\n",
     "ax.set_xscale('log')\n",
+    "ax.set_xlim(0.8, 2000)\n",
     "ax.set_ylim(4., 0)\n",
     "ax.set_xlabel('P')\n",
     "ax.set_ylabel('logg')\n",
@@ -627,6 +785,7 @@
     "            marker='o', linestyle='none', alpha=0.8)\n",
     "\n",
     "ax.set_xscale('log')\n",
+    "ax.set_xlim(0.8, 2000)\n",
     "ax.set_ylim(0, 1)\n",
     "ax.set_xlabel('P')\n",
     "ax.set_ylabel('e')\n",
