scikit learn and kmeans

--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -2,12 +2,35 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Adrian Price-Whelan at 2018-02-25 22:04:09 -0500 
+%% Created for Adrian Price-Whelan at 2018-03-07 18:15:33 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Pedregosa:2011,
+	Author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+	Date-Added = {2018-03-07 23:15:31 +0000},
+	Date-Modified = {2018-03-07 23:15:32 +0000},
+	Journal = {Journal of Machine Learning Research},
+	Pages = {2825--2830},
+	Title = {Scikit-learn: Machine Learning in {P}ython},
+	Volume = {12},
+	Year = {2011}}
+
+@article{Lloyd:1982,
+	Author = {Stuart P. Lloyd},
+	Date-Added = {2018-03-07 23:12:16 +0000},
+	Date-Modified = {2018-03-07 23:12:18 +0000},
+	Journal = {{IEEE} Transactions on Information Theory},
+	Keywords = {clustering},
+	Month = {March},
+	Number = {2},
+	Pages = {129--137},
+	Title = {Least Squares Quantization in {PCM}},
+	Volume = {28},
+	Year = {1982}}
 
 @article{Hogg:2017,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
