--- a/notebooks/figures/HighK-multimodal.ipynb
+++ b/notebooks/figures/HighK-multimodal.ipynb
@@ -96,10 +96,12 @@
     "    data = star.apogeervdata()\n",
     "    \n",
     "    unimodals = []\n",
+    "    means = []\n",
     "    for j in np.unique(y):\n",
     "        unimodals.append(unimodal_P(samples[y==j], data))\n",
+    "        means.append(MAP_sample(data, samples[y==j], joker_pars))\n",
     "        \n",
-    "    return all(unimodals)"
+    "    return all(unimodals), means"
    ]
   },
   {
@@ -109,6 +111,7 @@
    "outputs": [],
    "source": [
     "bimodal = []\n",
+    "MAP_samples = []\n",
     "nsamples = []\n",
     "\n",
     "n = 0\n",
@@ -118,7 +121,9 @@
     "        data = star.apogeervdata()\n",
     "        \n",
     "        if len(samples) > 1:\n",
-    "            bimodal.append(is_n_modal(data, samples, n_clusters=2))\n",
+    "            is_bimodal, MAP = is_n_modal(data, samples, n_clusters=2)\n",
+    "            bimodal.append(is_bimodal)\n",
+    "            MAP_samples.append(MAP)\n",
     "            \n",
     "        else:\n",
     "            bimodal.append(False)\n",
@@ -127,6 +132,7 @@
     "\n",
     "nsamples = np.array(nsamples)\n",
     "bimodal = np.array(bimodal)\n",
+    "MAP_samples = np.array(MAP_samples)\n",
     "bimodal.sum()"
    ]
   },
@@ -151,6 +157,67 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "bi_stars = np.array(high_K_stars)[bimodal]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog = {'APOGEE_ID':[], 'P':[], 'e':[], 'K':[]}\n",
+    "\n",
+    "for samples, star in zip(MAP_samples, np.array(high_K_stars)[bimodal]):\n",
+    "    for s in samples:\n",
+    "        catalog['APOGEE_ID'].append(star.apogee_id)\n",
+    "        catalog['P'].append(s['P'])\n",
+    "        catalog['e'].append(s['e'])\n",
+    "        catalog['K'].append(s['K'])\n",
+    "    \n",
+    "catalog['P'] = u.Quantity(catalog['P'])\n",
+    "catalog['K'] = u.Quantity(catalog['K'])\n",
+    "catalog = Table(catalog)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.write(path.join(table_path, 'highK-bimodal.fits'), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog[:4].write('../../paper/1-catalog/tables/bimodal-top.tex', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(6,6))\n",
+    "plt.plot(np.vstack((catalog['P'][::2], catalog['P'][1::2])), \n",
+    "         np.vstack((catalog['e'][::2], catalog['e'][1::2])),\n",
+    "         alpha=0.5)\n",
+    "plt.xscale('log')\n",
+    "plt.ylim(-0.04, 1.04)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -168,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_catalog = Table.read(path.join(table_path, 'high'))"
+    "catalog = Table.read(path.join(table_path, 'highK-bimodal.fits'))"
    ]
   },
   {
@@ -177,13 +244,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with h5py.File(samples_file, 'r') as f:\n",
-    "#     for star in tqdm.tqdm(np.array(high_K_stars)[bimodal][:10]):\n",
-    "#         samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
-    "#         data = star.apogeervdata()\n",
+    "with h5py.File(samples_file, 'r') as f:\n",
+    "    for star in tqdm.tqdm(np.array(high_K_stars)[bimodal]):\n",
+    "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "        data = star.apogeervdata()\n",
     "        \n",
-    "#         _ = plot_two_panel(data, samples, \n",
-    "#                            plot_data_orbits_kw=dict(highlight_P_extrema=False))"
+    "        fig = plot_two_panel(data, samples, \n",
+    "                             plot_data_orbits_kw=dict(highlight_P_extrema=False))\n",
+    "        fig.savefig('../../plots/bimodal/{0}.png'.format(star.apogee_id), dpi=200)\n",
+    "        plt.close(fig)"
    ]
   },
   {
@@ -192,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(36)\n",
+    "np.random.seed(111)\n",
     "\n",
     "rc = {\n",
     "    'axes.labelsize': 18,\n",
@@ -200,19 +269,25 @@
     "    'ytick.labelsize': 14\n",
     "}\n",
     "    \n",
-    "rand_subset = np.random.choice(np.array(high_K_stars)[bimodal], size=4, \n",
-    "                               replace=False)\n",
+    "# rand_subset = np.random.choice(catalog['APOGEE_ID'].astype('U20'), \n",
+    "#                                size=4, \n",
+    "#                                replace=False)\n",
+    "rand_subset = ['2M18041328-2958182',\n",
+    "               '2M19114515-0725486',\n",
+    "               '2M20184780+2023122',\n",
+    "               '2M22030551+6844336']\n",
     "    \n",
     "with mpl.rc_context(rc):\n",
     "    gs = GridSpec(4, 3)\n",
     "    fig = plt.figure(figsize=(8., 9.5))\n",
-    "    for j, star in enumerate(rand_subset):\n",
+    "    for j, apogee_id in enumerate(rand_subset):\n",
     "        ax1 = fig.add_subplot(gs[j, :2])\n",
     "        ax2 = fig.add_subplot(gs[j, 2])\n",
     "\n",
     "        if j == 0:\n",
-    "            ax1.set_title('Mildly multi-modal, high-$K$ stars', fontsize=20)\n",
-    "\n",
+    "            ax1.set_title('Bimodal, high-$K$ stars', fontsize=20)\n",
+    "        \n",
+    "        star = AllStar.get_apogee_id(session, apogee_id)\n",
     "        data = star.apogeervdata()\n",
     "\n",
     "        with h5py.File(samples_file, 'r') as f:\n",
@@ -232,10 +307,18 @@
     "\n",
     "        ax1.text(xlim[0] + (xlim[1]-xlim[0])/20,\n",
     "                 ylim[1] - (ylim[1]-ylim[0])/20,\n",
-    "                 star.apogee_id, fontsize=15, va='top', ha='left')\n",
+    "                 star.apogee_id + ' {0:.2f}'.format(star.logg), \n",
+    "                 fontsize=15, va='top', ha='left')\n",
     "\n",
     "        ax1.set_xlabel('')\n",
     "        ax2.set_xlabel('')\n",
+    "        \n",
+    "        logP = np.log10(samples['P'].to(u.day).value)\n",
+    "        span = np.ptp(logP)\n",
+    "#         ax2.set_xlim(10**(logP.min()-0.75),\n",
+    "#                      10**(logP.max()+0.75))\n",
+    "#         ax2.set_xlim(10**(logP.min()-0.5*span),\n",
+    "#                      10**(logP.max()+0.5*span))\n",
     "\n",
     "    ax1.set_xlabel(r'${\\rm BMJD} - t_0$ [day]')\n",
     "    ax2.set_xlabel('period, $P$ [day]')\n",
@@ -243,7 +326,7 @@
     "    fig.tight_layout()\n",
     "    fig.subplots_adjust(left=0.125, right=0.95, hspace=0.2, wspace=0.4)\n",
     "    \n",
-    "    fig.savefig(path.join(plot_path, 'highK-multimodal.pdf'), dpi=250)"
+    "    fig.savefig(path.join(plot_path, 'highK-bimodal.pdf'), dpi=250)"
    ]
   },
   {
@@ -264,8 +347,8 @@
     "stats = []\n",
     "with h5py.File(samples_file, 'r') as f:\n",
     "    for star in tqdm.tqdm(high_K_stars):\n",
-    "        lnP = np.log(f[star.apogee_id]['P'][:])\n",
-    "        stats.append([np.ptp(lnP), np.std(lnP)])\n",
+    "        logP = np.log10(f[star.apogee_id]['P'][:])\n",
+    "        stats.append([np.ptp(logP), np.std(logP)])\n",
     "stats = np.array(stats)"
    ]
   },
@@ -277,8 +360,8 @@
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(6,6))\n",
     "ax.scatter(stats[:, 0], 3*stats[:, 1], alpha=0.25, linewidth=0)\n",
-    "ax.set_xlim(-0.02, 10.5)\n",
-    "ax.set_ylim(-0.02, 10.5)"
+    "ax.set_xlim(-0.02, 5)\n",
+    "ax.set_ylim(-0.02, 5)"
    ]
   },
   {
@@ -287,7 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "((stats[:, 0] < 3) & bimodal).sum()"
+    "((stats[:, 0] < 1) | bimodal).sum()"
    ]
   },
   {
@@ -296,9 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# star = np.array(high_K_stars)[(stats[:, 0] > 8) & (stats[:, 1] < 2)][0]\n",
-    "# star = np.array(high_K_stars)[(stats[:, 0] < 2) & (stats[:, 1] < 2)][0]\n",
-    "# star = np.array(high_K_stars)[(stats[:, 0] > 2) & (stats[:, 0] < 4) & (stats[:, 1] < 2)][4]\n",
+    "star = np.array(high_K_stars)[(stats[:, 0] < 1) & np.logical_not(bimodal)][11]\n",
     "\n",
     "data = star.apogeervdata()\n",
     "with h5py.File(samples_file, 'r') as f:\n",
@@ -306,6 +387,34 @@
     "    \n",
     "_ = plot_two_panel(data, samples, plot_data_orbits_kw=dict(highlight_P_extrema=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -771,7 +880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
