--- a/notebooks/figures/Untitled.ipynb
+++ b/notebooks/figures/Untitled.ipynb
@@ -57,6 +57,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "check = ['2M00444105+8351358',\n",
+    "'2M06185816+4002167',\n",
+    "'2M08195523+2859517',\n",
+    "'2M09304744+5417137',\n",
+    "'2M11424549+0052349',\n",
+    "'2M11560974+5559038',\n",
+    "'2M12474509+1230192',\n",
+    "'2M14390944+4953029',\n",
+    "'2M17212080+6003296',\n",
+    "'2M19153224+4745341']\n",
+    "\n",
+    "with h5py.File(samples_file) as f, h5py.File(mcmc_samples_file) as mcmc_f:\n",
+    "    for apid in check:\n",
+    "        try:\n",
+    "            star = AllStar.get_apogee_id(session, apid)\n",
+    "        except Exception:\n",
+    "            continue\n",
+    "            \n",
+    "        data = star.apogeervdata()\n",
+    "        if apid in mcmc_f and np.mean(mcmc_f[apid]['chain-stats/gelman_rubin']) < 1.1:\n",
+    "            samples = JokerSamples.from_hdf5(mcmc_f[apid])\n",
+    "            samples.t0 = data.t0\n",
+    "        else:\n",
+    "            samples = JokerSamples.from_hdf5(f[apid])\n",
+    "        \n",
+    "        try:\n",
+    "            m1 = np.exp(star.ness_rg.lnM) * u.Msun\n",
+    "        except:\n",
+    "            m1 = 1.5*u.Msun\n",
+    "            \n",
+    "        m2_min = get_m2_min(m1, samples.get_orbit(0).m_f)\n",
+    "        print(m2_min)\n",
+    "        fig = plot_two_panel(data, samples)\n",
+    "        fig.axes[0].set_title(apid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "run = session.query(JokerRun).limit(1).one()\n",
     "joker_pars = run.get_joker_params()"
    ]
