update figure titles

--- a/notebooks/figures/HighK-multimodal.ipynb
+++ b/notebooks/figures/HighK-multimodal.ipynb
@@ -285,7 +285,7 @@
     "        ax2 = fig.add_subplot(gs[j, 2])\n",
     "\n",
     "        if j == 0:\n",
-    "            ax1.set_title('Bimodal, high-$K$ stars', fontsize=20)\n",
+    "            ax1.set_title('High-$K$, bimodal', fontsize=20)\n",
     "        \n",
     "        star = AllStar.get_apogee_id(session, apogee_id)\n",
     "        data = star.apogeervdata()\n",
@@ -307,7 +307,7 @@
     "\n",
     "        ax1.text(xlim[0] + (xlim[1]-xlim[0])/20,\n",
     "                 ylim[1] - (ylim[1]-ylim[0])/20,\n",
-    "                 star.apogee_id + ' {0:.2f}'.format(star.logg), \n",
+    "                 star.apogee_id, \n",
     "                 fontsize=15, va='top', ha='left')\n",
     "\n",
     "        ax1.set_xlabel('')\n",
