--- a/notebooks/figures/HighK-unimodal.ipynb
+++ b/notebooks/figures/HighK-unimodal.ipynb
@@ -64,6 +64,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "run = session.query(JokerRun).limit(1).one()\n",
+    "joker_pars = run.get_joker_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "high_K_stars = session.query(AllStar).join(StarResult).filter(StarResult.status_id>0).filter(StarResult.high_K).all()\n",
     "len(high_K_stars)"
    ]
@@ -73,16 +83,6 @@
    "metadata": {},
    "source": [
     "# Make the catalog:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run = session.query(JokerRun).limit(1).one()\n",
-    "joker_pars = run.get_joker_params()"
    ]
   },
   {
@@ -421,34 +421,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Astrometric scatter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -540,8 +512,9 @@
     "\n",
     "        for i, idx in enumerate(rand_subset):\n",
     "            ax = axes.flat[i]\n",
-    "\n",
-    "            star = AllStar.get_apogee_id(session, subset[idx]['APOGEE_ID'])\n",
+    "            \n",
+    "            apogee_id = subset[idx]['APOGEE_ID']\n",
+    "            star = AllStar.get_apogee_id(session, apogee_id)\n",
     "            data = star.apogeervdata()\n",
     "\n",
     "            if apogee_id in mcmc_f:\n",
@@ -582,7 +555,7 @@
     "        for i in range(4):\n",
     "            axes[i, 0].set_ylabel(_RV_LBL.format(u.km/u.s))\n",
     "\n",
-    "        fig.suptitle('Example stars from the high-$K$, unimodal sample', \n",
+    "        fig.suptitle('High-$K$, unimodal', \n",
     "                     x=0.55, y=0.96, fontsize=18)\n",
     "        fig.tight_layout()\n",
     "        fig.subplots_adjust(top=0.92)\n",
