--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -892,7 +892,8 @@ In many of these cases, there are certain times at which a future observation
 would be far more informative.
 Visually, those times correspond to regions of time when the predicted RVs have
 large variance based on the posterior samples at hand.
-% For example, \todo{top panel, time X vs. time Y, node vs. large variance}.
+For example, in the bottom left panel of \figurename~\ref{fig:highK-bimodal}, an
+observation at $t = 60$ would rule out one of the two possible orbits.
 
 \tablename~\ref{fig:highK-bimodal} contains ...
 \todo{Describe catalog contents: Also include M2min and primary mass when
